[MAINTENANCE] Mets à jour le bandeau de maintenance en prévision de la migration Clever Cloud

--- a/mon-aide-cyber-api/src/maintenance/maintenance.html
+++ b/mon-aide-cyber-api/src/maintenance/maintenance.html
@@ -32,7 +32,7 @@
   </head>
 
   <body>
-    MonAideCyber est en maintenance aujourd'hui de 12h à 14h.<br />
+    MonAideCyber est en maintenance aujourd'hui, 24/02/2026, de 19h à demain, 25/02/2026, 09h.<br />
     Nous vous invitons à revenir dès que la maintenance sera terminée.
   </body>
 </html>
